{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 8,
  "lineage": "f833e145-75ca-be70-2e29-a9da5e5643f1",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-05-28T22:13:35.626-07:00",
            "deny": [],
            "description": "Allow incoming HTTP (port 80) traffic to NGINX web servers and LB probes, including Google Health Checks.",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-03-72df496697e5/global/firewalls/allow-tcp-rule-993",
            "log_config": [],
            "name": "allow-tcp-rule-993",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-72df496697e5/global/networks/default",
            "priority": 1000,
            "project": "qwiklabs-gcp-03-72df496697e5",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-72df496697e5/global/firewalls/allow-tcp-rule-993",
            "source_ranges": [
              "0.0.0.0/0",
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "nginx-webserver"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "nginx_lb_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.36.107.233",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-05-28T22:13:35.716-07:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/qwiklabs-gcp-03-72df496697e5/global/addresses/nginx-lb-ip",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "nginx-lb-ip",
            "prefix_length": 0,
            "project": "qwiklabs-gcp-03-72df496697e5",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-72df496697e5/global/addresses/nginx-lb-ip",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "nginx_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20250513",
                    "labels": {
                      "my_label": "value"
                    },
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-72df496697e5/zones/us-west3-b/disks/nucleus-jumphost-947"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-05-28T22:13:42.463-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/qwiklabs-gcp-03-72df496697e5/zones/us-west3-b/instances/nucleus-jumphost-947",
            "instance_id": "7347651704543400940",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "wZIFQFol-8k=",
            "name": "nucleus-jumphost-947",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.106.202.171",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-72df496697e5/global/networks/default",
                "network_ip": "10.180.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-72df496697e5/regions/us-west3/subnetworks/default",
                "subnetwork_project": "qwiklabs-gcp-03-72df496697e5"
              }
            ],
            "project": "qwiklabs-gcp-03-72df496697e5",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-72df496697e5/zones/us-west3-b/instances/nucleus-jumphost-947",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-west3-b"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "nginx_http_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "nginx_url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    }
  ]
}